--- a/src/main/resources/templates/scores/ShowPoints.html
+++ b/src/main/resources/templates/scores/ShowPoints.html
@@ -40,6 +40,7 @@
 </head>
 <body>
 <form method="get">
+    <p th:text="${givenRandomNumber}"></p>
     <p th:text="${totalScore}"></p>
     <input type="submit" value="Play Again" th:formaction="${playAgain}">
     <input type="submit" value="Choose Level" formaction="allLevelsPage">
